Fix: Jplayer overflow on mobile stream

--- a/static/less/stream.less
+++ b/static/less/stream.less
@@ -63,6 +63,7 @@
 // Wall-Entries
 .wall-entry {
     position: relative;
+    overflow:hidden;
 
     .panel .panel-body {
         padding: @wallEntryInnerPadding;
